tests/suite/fail/generated/stderr/golden_undefined.ny
fn main() {
    let x = missing_symbol //~ ERROR undefined variable
}
